==> extesy/i3plus-MK2/Marlin/Sd2Card.cpp <==
#include "Marlin.h"
#include "Sd2Card.h"
  #include "watchdog.h"

  static void spiInit(uint8_t spiRate) {
    SPCR = _BV(SPE) | _BV(MSTR) | (spiRate >> 1);
    SPSR = spiRate & 1 || spiRate == 6 ? 0 : _BV(SPI2X);
  }

  static uint8_t spiRec() {
    SPDR = 0XFF;
    while (!TEST(SPSR, SPIF)) {  }
    return SPDR;
  }

  static void spiSend(uint8_t b) {
    SPDR = b;
    while (!TEST(SPSR, SPIF)) {  }
  }

  static uint8_t spiRec() {
    uint8_t data = 0;
    cli();
    WRITE(SPI_MOSI_PIN, HIGH);
    for (uint8_t i = 0; i < 8; i++) {
      WRITE(SPI_SCK_PIN, HIGH);
      nop;
      nop;
      data <<= 1;
      if (READ(SPI_MISO_PIN)) data |= 1;
      WRITE(SPI_SCK_PIN, LOW);
    }
    sei();
    return data;
  }

  static void spiSend(uint8_t data) {
    cli();
    for (uint8_t i = 0; i < 8; i++) {
      WRITE(SPI_SCK_PIN, LOW);
      WRITE(SPI_MOSI_PIN, data & 0X80);
      data <<= 1;
      WRITE(SPI_SCK_PIN, HIGH);
    }
    nop;
    nop;
    nop;
    nop;
    WRITE(SPI_SCK_PIN, LOW);
    sei();
  }
